Fix: permit /error endpoint and allow dynamic CORS origin patterns to resolve registration 403 Forbidden